--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDfQLQ4mo5oYDkykPlcVNo-Z6ikrsxDFgY" />
     </application>
 
 </manifest>
