--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,15 +39,15 @@
             android:label="@string/app_name" />
         <activity
             android:name=".CalculationActivity"
-            android:label="@string/title_activity_calculation" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".ResultActivity"
-            android:label="@string/title_activity_result" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".MapActivity"
-            android:label="@string/title_activity_map" >
+            android:label="@string/app_name" >
         </activity>
 
         <meta-data
