--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,13 @@
         </activity>
 
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDfQLQ4mo5oYDkykPlcVNo-Z6ikrsxDFgY" />
+            android:value="AIzaSyB3Ea7hK9eaX6WFAELI3atHSHPCvvKaSWA" />
     </application>
+
 
 </manifest>
